--- a/defense-unicorns-distro/zarf.yaml
+++ b/defense-unicorns-distro/zarf.yaml
@@ -52,6 +52,24 @@ variables:
   default: "false"
 
 components:
+  - name: set-ephemeral
+    required: true
+    actions:
+      onDeploy:
+        before:
+          - cmd: |
+              if [ -z "${ZARF_VAR_PVC_RECLAIM_POLICY}" ]; then
+                if [ "${ZARF_VAR_EPHEMERAL}" = "true" ]; then
+                  echo "Delete"
+                else
+                  echo "Retain"
+                fi
+              else
+                echo "${ZARF_VAR_PVC_RECLAIM_POLICY}"
+              fi
+            mute: true
+            setVariables:
+              - name: PVC_RECLAIM_POLICY
   - name: preflight
     required: true
     actions:
@@ -129,6 +147,8 @@ components:
         target: tmp/flux_###ZARF_PKG_TMPL_FLUX_VERSION###_windows_amd64.zip
       - source: https://github.com/fluxcd/flux2/releases/download/v###ZARF_PKG_TMPL_FLUX_VERSION###/flux_###ZARF_PKG_TMPL_FLUX_VERSION###_windows_arm64.zip
         target: tmp/flux_###ZARF_PKG_TMPL_FLUX_VERSION###_windows_arm64.zip
+  - name: storage-class
+    required: true
   - name: dubbd-pre-upgrade
     required: true
   - name: bigbang
@@ -198,6 +218,15 @@ components:
               ./zarf tools kubectl delete gitrepositories -n bigbang -l app.kubernetes.io/part-of=bigbang --ignore-not-found --timeout=20m
             description: "Cleaning up Big Bang resources"
             maxTotalSeconds: 3600 # 1 hour
+        after:
+          - cmd: |
+              if [ "$(./zarf tools kubectl get storageclass dubbd-default-sc -o jsonpath='{.reclaimPolicy}' 2>/dev/null)" = "Delete" ]; then
+                ./zarf tools kubectl delete pvc -n logging -l app.kubernetes.io/name=logging-loki --ignore-not-found --timeout=2m
+                ./zarf tools kubectl delete pvc -n monitoring -l app.kubernetes.io/name=grafana --ignore-not-found --timeout=2m
+                ./zarf tools kubectl delete pvc -n monitoring -l app.kubernetes.io/name=prometheus --ignore-not-found --timeout=2m
+                ./zarf tools kubectl delete pvc -n tempo -l app.kubernetes.io/name=tempo --ignore-not-found --timeout=2m
+              fi
+            description: "Remove DUBBD ephemeral PVCs if required"
     files:
       - source: scripts/on_failure.sh
         target: on_failure.sh
