--- a/.github/workflows/test-uds-core-aws-install.yaml
+++ b/.github/workflows/test-uds-core-aws-install.yaml
@@ -63,12 +63,21 @@ jobs:
         working-directory: aws/uds-core-aws
         timeout-minutes: 60
 
-      - name: Cleanup lingering bucket resources
+      - name: Cleanup lingering loki bucket resources
         if: always()
         run: |
           if [ -f run/loki/main.tf ]; then
             cd run/loki
-            terraform destroy
+            terraform destroy -auto-approve
+          fi
+        working-directory: aws/uds-core-aws
+
+      - name: Cleanup lingering velero bucket resources
+        if: always()
+        run: |
+          if [ -f run/velero/main.tf ]; then
+            cd run/velero
+            terraform destroy -auto-approve
           fi
         working-directory: aws/uds-core-aws
 
@@ -77,6 +86,6 @@ jobs:
         run: |
           if [ -f run/eks/main.tf ]; then
             cd run/eks
-            terraform destroy
+            terraform destroy -auto-approve 
           fi
         working-directory: aws/uds-core-aws
