--- a/k3d/local/zarf.yaml
+++ b/k3d/local/zarf.yaml
@@ -43,7 +43,7 @@ components:
               if [ -f "$F" ]; then
                 echo "Using cached zarf init package: $F..."
               else
-                (set -x; zarf tools download-init -o downloads)
+                (set -x; ./zarf tools download-init -o downloads)
               fi
               cp -f "$F" init.tar.zst
               ls -lath *.zst downloads
@@ -73,5 +73,5 @@ components:
       onDeploy:
         after:
           - cmd: |
-              echo "k3d cluster ###ZARF_PKG_TMPL_K3D_CLUSTER_NAME has been zarf initialized:"
+              echo "k3d cluster ###ZARF_PKG_TMPL_K3D_CLUSTER_NAME### has been zarf initialized:"
               (set -x; ./zarf tools kubectl config view; ./zarf tools kubectl get pods -A)
