--- a/defense-unicorns-distro/zarf.yaml
+++ b/defense-unicorns-distro/zarf.yaml
@@ -11,45 +11,45 @@ metadata:
   architecture: amd64
 
 variables:
-- name: BIGBANG_VERSION
-- name: FLUX_VERSION
-- name: DOMAIN
-  default: bigbang.dev
-  prompt: false
-- name: CERT_FILE
-  default: bigbang.dev.cert
-  description: "This file contains the cert for the ingress gateways"
-  prompt: false
-- name: KEY_FILE
-  default: bigbang.dev.key
-  description: "This file contains the key for the ingress gateways"
-  prompt: false
-- name: EXEMPT_NAMESPACES
-  description: "List of namespaces to be exempt from cluster policies (must contain zarf)"
-  default: '[ "zarf" ]'
-- name: APPROVED_REGISTRIES
-  description: "Regex of approved registries to allow in cluster"
-  default: "127.0.0.1* | registry1.dso.mil"
-- name: MONITORING_PROMETHEUS_PVC_SIZE
-  default: "50Gi"
-  description: Size of PVC for Prometheus
-  prompt: false
-- name: MONITORING_GRAFANA_PVC_SIZE
-  default: "10Gi"
-  description: Size of PVC for Grafana
-  prompt: false
-- name: LOKI_PVC_SIZE
-  default: "40Gi"
-  description: Size of the PVC for Loki when running in dev mode
-- name: SLACK_URL
-  default: https://none.dev
-  description: Slack Webhook URL for alerts
-- name: SLACK_CHANNEL
-  default: "#alerts"
-  description: Slack channel for alerts
-- name: EPHEMERAL
-  description: "Set whether the cluster should be considered ephemeral - if true all resources will be force destroyed on removal"
-  default: "false"
+  - name: BIGBANG_VERSION
+  - name: FLUX_VERSION
+  - name: DOMAIN
+    default: bigbang.dev
+    prompt: false
+  - name: CERT_FILE
+    default: bigbang.dev.cert
+    description: "This file contains the cert for the ingress gateways"
+    prompt: false
+  - name: KEY_FILE
+    default: bigbang.dev.key
+    description: "This file contains the key for the ingress gateways"
+    prompt: false
+  - name: EXEMPT_NAMESPACES
+    description: "List of namespaces to be exempt from cluster policies (must contain zarf)"
+    default: '[ "zarf" ]'
+  - name: APPROVED_REGISTRIES
+    description: "Regex of approved registries to allow in cluster"
+    default: "127.0.0.1* | registry1.dso.mil"
+  - name: MONITORING_PROMETHEUS_PVC_SIZE
+    default: "50Gi"
+    description: Size of PVC for Prometheus
+    prompt: false
+  - name: MONITORING_GRAFANA_PVC_SIZE
+    default: "10Gi"
+    description: Size of PVC for Grafana
+    prompt: false
+  - name: LOKI_PVC_SIZE
+    default: "40Gi"
+    description: Size of the PVC for Loki when running in dev mode
+  - name: SLACK_URL
+    default: https://none.dev
+    description: Slack Webhook URL for alerts
+  - name: SLACK_CHANNEL
+    default: "#alerts"
+    description: Slack channel for alerts
+  - name: EPHEMERAL
+    description: "Set whether the cluster should be considered ephemeral - if true all resources will be force destroyed on removal"
+    default: "false"
 
 components:
   - name: set-ephemeral
@@ -75,21 +75,21 @@ components:
     actions:
       onDeploy:
         before:
-        - cmd: "./zarf tools kubectl version --short || true"
-          setVariables:
-            - name: OUTPUT
-        - cmd: "./zarf tools kubectl get helmrelease bigbang -n bigbang >/dev/null 2>&1 && echo true || echo false"
-          mute: true
-          description: "Detect if this is an upgrade"
-          setVariables:
-            - name: IS_UPGRADE
+          - cmd: "./zarf tools kubectl version --short || true"
+            setVariables:
+              - name: OUTPUT
+          - cmd: "./zarf tools kubectl get helmrelease bigbang -n bigbang >/dev/null 2>&1 && echo true || echo false"
+            mute: true
+            description: "Detect if this is an upgrade"
+            setVariables:
+              - name: IS_UPGRADE
         after:
-        - cmd: ./preflight.sh
-        - cmd: rm preflight.sh
+          - cmd: ./preflight.sh
+          - cmd: rm preflight.sh
     files:
-    - source: scripts/preflight.sh
-      target: preflight.sh
-      executable: true
+      - source: scripts/preflight.sh
+        target: preflight.sh
+        executable: true
   - name: load-certs
     required: true
     files:
@@ -97,29 +97,25 @@ components:
         target: bigbang.dev.cert
       - source: bigbang.dev.key
         target: bigbang.dev.key
-      - source: scripts/cat_cert.sh
-        target: cat_certs.sh
-        executable: true
-      - source: scripts/cat_key.sh
-        target: cat_key.sh
-        executable: true
     actions:
       onDeploy:
         after:
-        - cmd: ./cat_certs.sh
-          description: read the cert
-          mute: true
-          setVariables:
-            - name: PUBLIC_CERT
-              sensitive: true
-        - cmd: ./cat_key.sh
-          description: read the cert
-          mute: true
-          setVariables:
-            - name: PUBLIC_KEY
-              sensitive: true
-        - cmd: rm cat_certs.sh
-        - cmd: rm cat_key.sh
+          - cmd: "cat ${ZARF_VAR_CERT_FILE}"
+            description: Read cert file into values
+            mute: true
+            setVariables:
+              - name: PUBLIC_CERT
+                sensitive: true
+                autoIndent: true
+          - cmd: "cat ${ZARF_VAR_KEY_FILE}"
+            description: Read key file into values
+            mute: true
+            setVariables:
+              - name: PUBLIC_KEY
+                sensitive: true
+                autoIndent: true
+          - cmd: rm bigbang.dev.cert
+          - cmd: rm bigbang.dev.key
   - name: download-flux
     required: true
     actions:
@@ -240,14 +236,14 @@ components:
       bigbang:
         version: "###ZARF_PKG_TMPL_BIGBANG_VERSION###"
         valuesFiles:
-        - ../values/values.yaml
-        - ../values/kyverno.yaml
-        - ../values/istio.yaml
-        - ../values/loki.yaml
-        - ../values/promtail.yaml
-        - ../values/kiali.yaml
-        - ../values/monitoring.yaml
-        - ../values/neuvector.yaml
-        - ../values/tempo.yaml
+          - ../values/values.yaml
+          - ../values/kyverno.yaml
+          - ../values/istio.yaml
+          - ../values/loki.yaml
+          - ../values/promtail.yaml
+          - ../values/kiali.yaml
+          - ../values/monitoring.yaml
+          - ../values/neuvector.yaml
+          - ../values/tempo.yaml
   - name: dubbd-post-upgrade
     required: true
