--- a/k3d/local/zarf.yaml
+++ b/k3d/local/zarf.yaml
@@ -2,7 +2,7 @@
 kind: ZarfPackageConfig
 metadata:
   name: k3d-local
-  description: Defense Unicorns k3d environment 
+  description: Defense Unicorns k3d environment
   architecture: amd64
   authors: "@runyontr, @timblaktu"
   source: https://github.com/defenseunicorns/uds-package-dubbd/k3d/local
@@ -43,14 +43,13 @@ components:
               if [ -f "$F" ]; then
                 echo "Using cached zarf init package: $F..."
               else
-                (set -x; zarf tools download-init -o downloads)
+                (set -x; ./zarf tools download-init -o downloads)
               fi
               cp -f "$F" init.tar.zst
               ls -lath *.zst downloads
       onDeploy:
-        after: 
-          - cmd: |
-              zarf package deploy init.tar.zst --components '###ZARF_PKG_TMPL_INIT_COMPONENTS###' --confirm -l warn
+        after:
+          - cmd: "./zarf package deploy init.tar.zst --components '###ZARF_PKG_TMPL_INIT_COMPONENTS###' --confirm -l warn"
   - name: metallb
     required: true
     files:
@@ -74,5 +73,5 @@ components:
       onDeploy:
         after:
           - cmd: |
-              echo "k3d cluster ###ZARF_PKG_TMPL_K3D_CLUSTER_NAME has been zarf initialized:"
-              (set -x; zarf tools kubectl config view; zarf tools kubectl get pods -A)
+              echo "k3d cluster ###ZARF_PKG_TMPL_K3D_CLUSTER_NAME### has been zarf initialized:"
+              (set -x; ./zarf tools kubectl config view; ./zarf tools kubectl get pods -A)
