--- a/values/istio.yaml
+++ b/values/istio.yaml
@@ -49,8 +49,10 @@ istio:
       hosts:
         - "*.{{ .Values.domain }}"
       tls:
-        key: "###ZARF_VAR_PUBLIC_KEY###"
-        cert: "###ZARF_VAR_PUBLIC_CERT###"
+        key: |
+          ###ZARF_VAR_PUBLIC_KEY###
+        cert: |
+          ###ZARF_VAR_PUBLIC_CERT###
         minProtocolVersion: "TLSV1_3"
     public: null
     tenant:
@@ -58,8 +60,10 @@ istio:
       hosts:
         - "*.{{ .Values.domain }}"
       tls:
-        key: "###ZARF_VAR_PUBLIC_KEY###"
-        cert: "###ZARF_VAR_PUBLIC_CERT###"
+        key: |
+          ###ZARF_VAR_PUBLIC_KEY###
+        cert: |
+          ###ZARF_VAR_PUBLIC_CERT###
         minProtocolVersion: "TLSV1_3"
 istioOperator:
   enabled: true
