--- a/aws/dubbd-aws/zarf.yaml
+++ b/aws/dubbd-aws/zarf.yaml
@@ -123,6 +123,8 @@ components:
       target: run/loki/variables.tf
     - source: ../loki/output.tf
       target: run/loki/output.tf
+    - source: ../loki/moved.tf
+      target: run/loki/moved.tf
     - source: ../loki/terraform.tfvars
       target: run/loki/terraform.tfvars
   - name: loki-execute-terraform
