--- a/.github/workflows/create-uds-oscal-component.yaml
+++ b/.github/workflows/create-uds-oscal-component.yaml
@@ -19,7 +19,12 @@ jobs:
         uses: actions/setup-go@v4
         with:
           go-version: "1.20"
-
+          
+      - name: Node and NPM
+        uses: actions/setup-node@v3
+        with:
+          node-version: latest
+          
       - name: Download Component Generator
         run: |
           git clone https://github.com/defenseunicorns/component-generator.git
@@ -38,6 +43,11 @@ jobs:
 
       - name: Clean Up
         run: rm -rf component-generator
+
+      - name: Yaml Formatter
+        run: |
+          npm install --save-dev --save-exact prettier
+          npx prettier oscal-component.yaml aws/dubbd-aws/oscal-component.yaml aws/uds-core-aws/oscal-component.yaml --write
 
       - name: Commit OSCAL-Component Files
         env:
