--- a/.github/workflows/create-uds-oscal-component.yaml
+++ b/.github/workflows/create-uds-oscal-component.yaml
@@ -64,7 +64,7 @@ jobs:
 
               if [ "$git_status" = "D " ]; then
                   removed+=("$filename")
-              else
+              elif [ -f "$filename" ]; then
                   additions+=("$filename")
               fi
           done < <(git status --porcelain=v1 -z)
@@ -109,5 +109,3 @@ jobs:
             --fail-with-body \
             --oauth2-bearer "$(gh auth token)" \
             --data @-
-          BRANCH_NAME=$(echo $GITHUB_REF | cut -d'/' -f3)
-          echo $BRANCH_NAME
