--- a/aws/values/aws-velero.yaml
+++ b/aws/values/aws-velero.yaml
@@ -19,3 +19,14 @@ addons:
         server:
           annotations:
             eks.amazonaws.com/role-arn: "###ZARF_VAR_VELERO_S3_ROLE_ARN###"
+      schedules:
+        udsbackup:
+          disabled: false
+          schedule: "0 3 * * *"
+          useOwnerReferencesInBackup: false
+          template:
+            csiSnapshotTimeout: 0s
+            includedNamespaces:
+              - monitoring
+              - tempo
+            ttl: "240h"
