feat: k3 ci ignore oscal/clean up formatter

--- a/.github/workflows/ci-on-pull-request-k3d.yaml
+++ b/.github/workflows/ci-on-pull-request-k3d.yaml
@@ -13,12 +13,10 @@ on:
       - "**/*.svg"
       - "aws/**"
       - "oscal-component.y*ml"
-      - "aws/dubbd-aws/oscal-component.y*ml"
-      - "aws/uds-core-aws/oscal-component.y*ml"
       - ".github/workflows/*aws*.y*ml"
       - ".github/workflows/*cloudtrail*.y*ml"
       - ".github/workflows/*uds*.y*ml"
-      - ".github/workflows/oscal/*oscal-component.y*ml"
+      - "**/*oscal-component.y*aml"
 
 jobs:
   test-release:
