--- a/.github/workflows/create-uds-oscal-component.yaml
+++ b/.github/workflows/create-uds-oscal-component.yaml
@@ -50,69 +50,12 @@ jobs:
           npx prettier oscal-component.yaml aws/dubbd-aws/oscal-component.yaml aws/uds-core-aws/oscal-component.yaml --write
           npm uninstall --save-dev prettier
           rm -rf node_modules/
-          ls -al
           rm package.json
           rm package-lock.json
-          ls -al
           echo "GITHUB_REPOSITORY: $GITHUB_REPOSITORY"
           echo "GITHUB_REF_NAME: $GITHUB_REF_NAME"
-      - name: Commit OSCAL-Component Files
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        shell: bash
-        run: |
-          set -euo pipefail
 
-          additions=()
-          removed=()
-          while IFS= read -r -d $'\0' status_line; do
-              filename="${status_line:3}"
-              git_status="${status_line:0:2}"
-
-              if [ "$git_status" = "D " ]; then
-                  removed+=("$filename")
-              else
-                  additions+=("$filename")
-              fi
-          done < <(git status --porcelain=v1 -z)
-
-          if [ "${#additions[@]}" -eq 0 ] ; then
-            echo "No files updated, skipping commit"
-            exit 0
-          fi
-
-          commitMessage="chore: Create or Update OSCAL Documents"
-
-          # for now, we ignore $removed files, but they could be handled similarly (it's just harder to send two lists of positional input files into jq)
-          # jq's iteration over inputs will skip over files with 0 lines (empty files)
-
-          jq \
-            --null-input \
-            --raw-input \
-            --arg repositoryNameWithOwner "$GITHUB_REPOSITORY" \
-            --arg branchName "$GITHUB_REF_NAME" \
-            --arg expectedHeadOid "$GITHUB_SHA" \
-            --arg commitMessage "$commitMessage" \
-            '
-          {
-            "query": "mutation ($input: CreateCommitOnBranchInput!) { createCommitOnBranch(input: $input) { commit { url } } }",
-            "variables": {
-              "input": {
-                "branch": {
-                  "repositoryNameWithOwner": $repositoryNameWithOwner,
-                  "branchName": $branchName
-                },
-                "message": {
-                  "headline": $commitMessage
-                },
-                "fileChanges": {
-                  "additions": [reduce inputs as $line ({}; .[input_filename] += [$line]) | map_values(join("\n")) | to_entries[] | {path: .key, contents: .value | @base64}]
-                },
-                "expectedHeadOid": $expectedHeadOid
-              }
-            }
-          }' "${additions[@]}" | curl https://api.github.com/graphql \
-            --silent \
-            --fail-with-body \
-            --oauth2-bearer "$(gh auth token)" \
-            --data @-
+      - name: Commit and push changes
+        uses: stefanzweifel/git-auto-commit-action@v4
+        with:
+          skip_checkout: true
