ci: filter out changes to test files/dependencies

--- a/.github/workflows/ci-on-pull-request-dubbd-aws.yaml
+++ b/.github/workflows/ci-on-pull-request-dubbd-aws.yaml
@@ -13,6 +13,7 @@ on:
       - "**/*.svg"
       - "aws/uds-core-aws/**"
       - "aws/cloudtrail/**"
+      - "aws/**/test/**"
       - "k3d/**"
       - ".github/workflows/*k3d*.y*ml"
       - ".github/workflows/*cloudtrail*.y*ml"
